--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>Goal Tracker</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="margin: 0 auto;"></div>
     <script src="https://apis.google.com/js/api.js" type="text/javascript"></script>
     <script src="https://accounts.google.com/gsi/client" type="text/javascript"></script>
     <script type="module" src="/src/main.jsx"></script>
