--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>Goal Tracker</title>
   </head>
   <body>
-    <div id="root" style="margin: 0 auto;"></div>
+    <div id="root" class="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
