Hotjar events and identify API calls added

--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,12 @@
           r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
           a.appendChild(r);
       })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+      
+      var userId = "user_123";
+      window.hj('identify', userId, {
+          'Signed up date': new Date().toISOString().split('T')[0] + "Z",
+          'Account Type': Math.random() > 0.5 ? 'Consumer' : 'Merchant',
+      });
     </script>
   </head>
   <body>
