Console logs added for debugging

--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,7 @@
           'Signed up date': new Date().toISOString().split('T')[0] + "Z",
           'Account Type': Math.random() > 0.5 ? 'Consumer' : 'Merchant',
       });
+      console.log("Identity event fired")
     </script>
   </head>
   <body>
